# openmas

./: .flake8  .gitignore  .pre-commit-config.yaml  404.html  Architecture.md  CHANGELOG.md  CNAME  DESIGN.txt  GettingStarted.md  HOW_TO_MAIN.md  MCP_HELP.md  README.md  docker-compose.yaml  fix_whitespace.py  index.html  mkdocs.yml  mypy.ini  objects.inv  openmas_project.yml  pyproject.toml  sitemap.xml  test_real_stdio_integration.py  tox.ini
.cursor/rules/: checks.mdc  mcp.mdc  poetry.mdc  tdd.mdc
.github/workflows/: ci-cd.yml  ci.yml  docs.yml
api_reference/: index.html
backup/: mcp_agent.py  mcp_client.py  simple_agent.py
cli/: index.html
cli/assets/: index.html
cli/generate-compose/: index.html
cli/generate-dockerfile/: index.html
cli/init/: index.html
cli/list/: index.html
cli/prompts/: index.html
cli/run/: index.html
cli/validate/: index.html
communicator_extensions/: index.html
contributing/contributing/: index.html
contributing/development_workflow/: index.html
contributing/docstring_policy/: index.html
contributing/example_prompts/: index.html
contributing/prompt_and_sampling/: index.html
contributing/testing_strategy/: index.html
core_concepts/architecture/: index.html
core_concepts/design/: index.html
core_concepts/project_structure/: index.html
docs/: agent_refactoring.md  api_reference.md  architecture.md  communication.md  communicator_extensions.md  communicator_plugins.md  configuration.md  contributing.md  deployment.md  design.md  design.txt  development_workflow.md  docstring_policy.md  examples.md  getting_started.md  index.md  llm_integration.md  mcp_integration.md  patterns.md  project_structure.md  reasoning_integration.md  testing-utilities.md  testing.md  why_openmas.md
docs/cli/: assets.md  deps.md  generate-compose.md  generate-dockerfile.md  index.md  init.md  list.md  prompts.md  run.md  validate.md
docs/contributing/: example_prompts.md  prompt_and_sampling.md  testing_strategy.md
docs/core_concepts/: architecture.md  design.md  project_structure.md
docs/guides/: asset_management.md  communication.md  configuration.md  deployment.md  getting_started.md  installation.md  llm_integration.md  mcp_developer_guide.md  mcp_integration.md  mcp_sse_tool_call_tutorial.md  mcp_stdio_tool_call_tutorial.md  patterns.md  prompt_management.md  reasoning_integration.md  sampling_configuration.md  testing-utilities.md
docs/stylesheets/: extra.css
docs/use_cases/: chesspal_ai.md
examples/: Dockerfile  README_MCP.md  __init__.py  anthropic_server_example.py  hello_agent.py  index.html  mcp_agent_example.py  mcp_client_example.py  mcp_math_client.py  mcp_math_server.py  mcp_server_example.py
examples/00_hello_agent/: README.md
examples/00a_hello_agent_single/: .gitignore  README.md  openmas_project.yml
examples/basic/: __init__.py  hello_world.py  simple_agent.py
examples/custom_communicator/: README.md  mqtt_communicator.py
examples/example_03_patterns/: __init__.py
examples/integrations/: mcp_agent.py
examples/legacy/: DESIRED_LAYOUT.txt  README.md  README_MCP.md  __init__.py  anthropic_client_example.py  anthropic_streaming_client_example.py  bdi_agent_example.py  docker-compose.yml  grpc_example.py  mcp_agent_example.py  mcp_basic_example.py  mcp_client_example.py  mcp_math_client.py  mcp_math_server.py  mcp_mock_example.py  mcp_server_example.py  mcp_simple.py  mcp_simple_example.py  orchestrator_worker_example.py
examples/llm_service/: __init__.py  main.py
examples/multi-agent/: simplemas.manifest.yaml
guides/asset_management/: index.html
guides/communication/: index.html
guides/configuration/: index.html
guides/deployment/: index.html
guides/getting_started/: index.html
guides/installation/: index.html
guides/llm_integration/: index.html
guides/mcp_developer_guide/: index.html
guides/mcp_integration/: index.html
guides/mcp_sse_tool_call_tutorial/: index.html
guides/mcp_stdio_tool_call_tutorial/: index.html
guides/patterns/: index.html
guides/prompt_management/: index.html
guides/reasoning_integration/: index.html
guides/sampling_configuration/: index.html
guides/testing-utilities/: index.html
integration/mcp/: test_real_stdio_integration.py
model-context-protocol-examples/: chesspal-mcp-engine
scripts/: check_quality.sh  check_types.sh  extract_project.py  run_mypy_on_examples.py
search/: search_index.json
src/openmas/: __init__.py  config.py  exceptions.py
src/simple_mas/: __init__.py  agent.py  config.py  exceptions.py  logging.py  mcp_agent.py
stylesheets/: extra.css
tests/: README.md  __init__.py  conftest.py  test_agent.py  test_agent_harness.py  test_bdi_agent.py  test_config.py  test_deployment_discovery.py  test_http_communicator.py  test_mcp_agent.py  test_mcp_base.py  test_mcp_sse_communicator.py  test_mcp_stdio_communicator.py  test_mock_communicator.py  test_spade_bdi_agent.py
tests/integration/: __init__.py  test_cli_run.py  test_getting_started_guide.py
tests/unit/: __init__.py  conftest.py  test_config.py  test_version.py
why_openmas/: index.html
(+314 files in other folders)
