[tool.poetry]
name = "simple-mas"
version = "0.1.0"
description = "SimpleMas: A lightweight SDK for building Multi-Agent Systems"
authors = ["Wilson <your-email@example.com>"]
readme = "README.md"
packages = [{include = "simple_mas", from = "src"}]

[tool.poetry.scripts]
simplemas = "simple_mas.cli:main"
simplemas-deploy = "simple_mas.deployment.cli:main"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.5.0"
httpx = ">=0.25.0"
structlog = "^23.2.0"
fastapi = "^0.115.12"
mcp = "1.6.0"
pyyaml = "^6.0.1"
grpcio = "^1.71.0"
grpcio-tools = "^1.71.0"
protobuf = "^6.30.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
black = "^23.9.1"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.5.1"
types-requests = "^2.31.0.2"
pre-commit = "^4.2.0"
types-pyyaml = "^6.0.12.20250402"
types-setuptools = "^79.0.0.20250422"
uvicorn = "^0.34.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 120

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest]
testpaths = ["tests"]
norecursedirs = ["tests/backup"]
python_files = "test_*.py"
asyncio_mode = "auto"

[tool.pre_commit]
hooks = [
    "trailing-whitespace",
    "end-of-file-fixer",
    "check-yaml",
    "check-toml",
    "black",
    "isort",
    "flake8",
    "mypy",
    "pytest"
]
